# project-timetable-generator

./: .gitignore  AGENTS.md  README.md  main.py  output.csv  params.json  pyproject.toml  sample_projects.csv  sample_staff.csv  staff_export.csv
.github/workflows/: build.yml
assets/app_icon/: icon.icns
docs/: README.md
docs/architecture/: README.md  data-model.md  generator-design.md  overview.md  ui-architecture.md
docs/assets/: README.md
docs/decisions/: 0001-template.md  0002-generator-strategy.md  0003-ratio-denominator-and-staff-change.md  0004-project-lifecycle-profile.md  0005-global-generation-and-dictionary.md  0006-session-model-and-retention.md  0007-staff-input-defaults.md  0008-daily-hours-full-and-split.md  0009-generator-algorithm.md  0010-daily-hours-1h-granularity.md  0011-split-continuity-semantics.md  0012-tuning-ux-and-param-export.md  0013-runtime-model-and-tech-stack.md  0014-holiday-api-fallback.md  README.md
docs/domain/: README.md  compliance.md  glossary.md  project.md  ratio.md  staff.md  work-hours.md
docs/plans/: README.md  implementation-status.md  roadmap.md
docs/requirements/: README.md  functional-requirements.md  non-functional-requirements.md  product-vision.md
scripts/: build.sh
src/nicegui_demo/: __init__.py  __main__.py
src/timetable_generator/: __init__.py  __main__.py
tests/: conftest.py  test_ui.py
tests/test_e2e/: test_m1_full.py
tests/test_export/: test_csv.py  test_gen_to_csv.py
tests/test_generator/: cases.py  cases_multi.py  test_capacity.py  test_conflict.py  test_continuity.py  test_evaluation.py  test_evaluation_multi.py  test_greedy_single.py  test_invariants.py  test_multi_project.py  test_planner.py  test_ratio.py  test_retry.py  test_validator.py
tests/test_holiday/: test_api_client.py  test_cache.py  test_orchestrator.py  test_resolver.py
tests/test_models/: test_project.py  test_staff_change.py  test_staff_info.py  test_staff_state.py  test_staff_state_from_info.py  test_work_hour.py
tests/test_param_io/: test_csv_reader.py  test_date_utils.py  test_export.py  test_project_io.py  test_staff_import.py
tools/: icons.py
(+45 files in other folders)
