[project]
name = "timetable-generator"
version = "0.1.0"
description = "排班打卡时间表生成器 — 回溯性合规工具"
readme = "README.md"
authors = [
    { name = "Michael Mao", email = "michael.mao99@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "chardet>=5.2.0",
    "nicegui>=3.14.0",
    "pywebview>=6.2.1",
    "httpx>=0.28.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
timetable-generator = "timetable_generator.__main__:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pillow>=12.3.0",
    "pyinstaller>=6.21.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-httpx>=0.1.0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
main_file = "main.py"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "SIM"]
